tests/stable/function/compile_fail/missing_assure.rs
use pre::pre;

#[pre("is bar")]
fn foo() {}

#[pre]
fn main() {
    foo()
}
